Added new plots

--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -332,7 +332,7 @@ After the training process a cut criterion is still needed to be established to 
 The tail is fit using an exponential function in the logarithmic scale ($A \mathcal{F} + B$). The fitting is done between for the range $\mu + \sigma$ - $\mu + n\sigma$ where $\mu$ is the mean and $\sigma$ is the rms value of the distribution. n takes a value depending on the last non-zero angular bin for that region. The exponential assumption is only a reasonable guess especially due to the low statistics of the last few bins. The bin size can also affect the fit and is determined for each angular region by minimising the residual fit. This bin size is also verfied with the calculator available in python to negate the possibility of over binning or under binning. Table~\ref{tab:Cut_eval} shows the \textit{observed} and \textit{predicted} values for the exponential fit procedure. The values are calculated by integrating from the start point mentioned in the first column till the end of the $\mathcal{F}$ distribution. The estimate using the exponential fit mostly agrees with the observed values. It agrees the best near the mean of the distribution and becomes worse near the tails. In the higher angular regions a secondary bump like structure is also seen. This is attributed to the form of the Fisher polynomial and the lack of the product term. The predicted values also include the uncertainties of the fit which slightly increases the predicted number of the background events. The cut, $\mathcal{F}_cut$ is calculated such that after 20 years of data taking with a full SD array 0.2 events are expected to pass for each sub-angular regions with a total of 1 background event for the full search angular range. 
 
 \begin{equation}
-  label{eq:fisher_poly_cut}
+  \label{eq:fisher_poly_cut}
   \mathcal{F}_{cut} = \mathrm{\frac{log[1.25 \cdot B \cdot 0.2 \cdot \Delta (\mathcal{F}) / 20] - A}{B} }
 \end{equation}
 
