More plots for MC control

--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -93,7 +93,7 @@ The Fisher value distribution for the test sample is shown in fig~\ref{}. As it 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_comp_bkg_test_wnt.pdf}
-  \caption{Test_reval vs background}
+  \caption{Test reval vs background}
   \label{fig:Fish_bkg_test}
 \end{figure}
 
