--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -94,7 +94,7 @@
 \newcommand*{\thesisyear}{2024}
 \newcommand*{\thesisnumber}{BONN-IR-2019-XXX}
 % Command to horizontal cenetr the table contents
-\newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
+\newcolumntype{P}[1]{>{\centering\arraybackslash}m{#1}}
 \captionsetup[figure]{labelfont=bf,format=hang}
 %------------------------------------------------------------------------------
 % The abstract is only needed for the printed version and should be in
