--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -2942,6 +2942,14 @@ author =  {Pierre Billoir}
   pages     = {AE31A-06},
   adsurl    = {https://ui.adsabs.harvard.edu/abs/2017AGUFMAE31A..06C}
 }
+@misc{gap_top_down_module,
+  title  = {GAP Note 2011-038, An Offline Module for Injection of Random Accidental Signals in SD Stations	 (Auger key protected)},
+  author = {P. Billoir, J.L. Navarro, S. Navas}
+}
+@misc{gap_top_down_proc,
+  title  = {GAP Note 2006-072, Top-down Selection of Events and Stations	 (Auger key protected)},
+  author = {Pierre Billoir}
+}
 @article{James:1975dr,
   author       = {James, F. and Roos, M.},
   title        = {{Minuit: A System for Function Minimization and Analysis of the Parameter Errors and Correlations}},
@@ -3009,6 +3017,32 @@ author =  {Pierre Billoir}
   volume        = {08},
   pages         = {042},
   year          = {2011}
+}
+@misc{gap_systematics,
+  author = {Jose Luis Navarro and others},
+  howpublished = {GAP Note 2010-027 (Auger key protected)},
+  title = {An extensive review on the down-going neutrino systematic uncertainties from the Pierre Auger Observatory},
+  year = {2010}
+}
+@article{Huege:2022xbo,
+  author        = {Huege, Tim},
+  collaboration = {CORSIKA},
+  title         = {{CORSIKA 8 - the next-generation air shower simulation framework}},
+  eprint        = {2208.14240},
+  archiveprefix = {arXiv},
+  primaryclass  = {astro-ph.IM},
+  doi           = {10.21468/SciPostPhysProc.13.028},
+  journal       = {SciPost Phys. Proc.},
+  volume        = {13},
+  pages         = {028},
+  year          = {2023}
+}
+@misc{gap_note_det_systematics,
+  author = {O. Blanch.},
+  howpublished = {The Pierre Auger Collaboration},
+  title = {Study of systematic uncertainties for skimming tau neutrinos. Technical Report
+054},
+  year = {2006}
 }
 @article{Feldman:1997qc,
   author        = {Feldman, Gary J. and Cousins, Robert D.},
